# worldgen

./: CMakeLists.txt  imgui.ini
.cache/clangd/index/: App.cpp.7BBA6109D9C56FCC.idx  App.hpp.064F9BC972E75D0F.idx  CubeSphere.cpp.2705BAFCE14231C8.idx  CubeSphere.hpp.A7B6E23EA2FADBC2.idx  HeightField.cpp.A6A7FB7724761674.idx  HeightField.hpp.09B2759819727EC1.idx  Lod.cpp.0ECF32F9BFBC2B91.idx  Lod.hpp.611341ABA8E64CCD.idx  Material.cpp.EF8B1B3275D5453B.idx  Material.hpp.DE7D1DCD613E7D0A.idx  Mesh.cpp.9EBFD21611F52A08.idx  Mesh.hpp.DCA51F513A72A8F3.idx  OrbitCamera.cpp.CC245FC98ACFCA3F.idx  OrbitCamera.hpp.5E5D613F9E5D4B9D.idx  PatchBuilder.cpp.1B15C36443789983.idx  PatchBuilder.hpp.6C0C88F142DA81CC.idx  Quadtree.cpp.EE504014DDD7D2A3.idx  Quadtree.hpp.592F4524074AB988.idx  Renderer.cpp.C0665C78F83CDCD0.idx  Renderer.hpp.5B47205F6BE26D81.idx  Scale.hpp.56902978AE662C37.idx  Shader.cpp.EF76E2B5F320CDE1.idx  Shader.hpp.001BBFFCBD6AE2B5.idx  Vertex.hpp.975F023CC78E9517.idx  gl.c.0A58D53560936922.idx  gl.h.C4041E4A5EC3A4E3.idx  imconfig.h.400A9DF8D2FF7759.idx  imgui.cpp.8D7366A47CF17B47.idx  imgui.h.949938BBDD38DF9D.idx  imgui_draw.cpp.A8ABBCBB6056641C.idx  imgui_impl_glfw.cpp.D43648DB17CCB7B4.idx  imgui_impl_glfw.h.6A623FC5AFDFE274.idx  imgui_impl_opengl3.cpp.788D49CAFE96067A.idx  imgui_impl_opengl3.h.D191B4454DFE1FC3.idx  imgui_impl_opengl3_loader.h.EFB82E0B38C07BF1.idx  imgui_internal.h.E7A16A12A3F79EC4.idx  imgui_tables.cpp.D25019413140ABAC.idx  imgui_widgets.cpp.BF28CA489BAD4B7E.idx  imstb_rectpack.h.F7588350E3DC6362.idx  imstb_textedit.h.9D2761CCD02A0941.idx  (+3 more)
docs/: PROJECT_CONTEXT.md
src/: main.cpp
src/app/: App.cpp  App.hpp
src/gfx/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Vertex.hpp
src/input/: OrbitCamera.cpp  OrbitCamera.hpp
src/planet/: CubeSphere.cpp  CubeSphere.hpp  Lod.cpp  Lod.hpp  PatchBuilder.cpp  PatchBuilder.hpp  Quadtree.cpp  Quadtree.hpp  Scale.hpp
src/terrain/: HeightField.cpp  HeightField.hpp
